更多兼容